redesign the logic for saving and merging audio. Now they are merged on a schedule