@@ -26,9 +26,11 @@ import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.nio.file.StandardCopyOption;
 import java.time.LocalDate;
+import java.util.List;
+import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -56,26 +58,12 @@ public class AudioServiceImpl implements AudioService {
     @Override
     @Transactional
     public void saveVoice(Voice voice, Long userId) {
-        LocalDate today = LocalDate.now();
-        String existingAudioId = getFileId(userId, today).orElse("");
-        String newFileId = voice.getFileId();
+        String fileId = voice.getFileId();
         try {
             // Save an audio file to local storage
-            saveAudioToLocalStorage(newFileId);
-
-            if (!existingAudioId.isEmpty()) {
-                // Concatenate all an audio and new one
-                concatenateAudios(existingAudioId, newFileId);
-                // Voice analysis
-                String newText = analyzeVoice(newFileId);
-                // Save data to DB
-                saveOrUpdateAudioInDB(existingAudioId, newFileId, userId, newText);
-            } else {
-                // Voice analysis
-                String newText = analyzeVoice(newFileId);
-                // Save data to DB
-                saveOrUpdateAudioInDB(existingAudioId, newFileId, userId, newText);
-            }
+            saveAudioToLocalStorage(fileId);
+            String text = analyzeVoice(fileId);
+            saveAudioToDB(fileId, userId, text);
         } catch (Exception e) {
             log.error("Error processing voice data", e);
             throw new RuntimeException("Error processing voice data", e);
@@ -93,7 +81,7 @@ public class AudioServiceImpl implements AudioService {
             convertOggToWav(localPath);
 
         } catch (Exception e) {
-            deleteVoice(fileId);
+            deleteAudio(fileId);
             throw new RuntimeException("Error processing voice data", e);
         }
     }
@@ -115,34 +103,23 @@ public class AudioServiceImpl implements AudioService {
         }
     }
 
-    private void saveOrUpdateAudioInDB(String existingAudioId, String newAudioId, Long userId, String newText) {
-        Optional<AudioEntity> existingAudio = audioRepository.findById(existingAudioId);
-        String currentText = existingAudio.map(AudioEntity::getText).orElse("");
-        String updatedText = currentText.isEmpty() ? newText : currentText + " " + newText;
-        String fileId = existingAudioId.isEmpty() ? newAudioId : existingAudioId;
-
+    private void saveAudioToDB(String fileId, Long userId, String text) {
         AudioEntity entity = AudioEntity.builder()
                 .id(fileId)
                 .date(LocalDate.now())
                 .userId(userId)
-                .text(updatedText)
+                .text(text)
                 .build();
         audioRepository.save(entity);
     }
 
     @Override
     @Transactional
-    public void deleteVoice(String fileId) {
-        String pathToAudio = getPathToAudio(fileId);
-        Path path = Paths.get(pathToAudio);
+    public void deleteAudio(String fileId) {
         try {
-            boolean result = Files.deleteIfExists(path);
-            if (result) {
-                audioRepository.deleteById(fileId);
-            } else {
-                throw new RuntimeException("File deletion failed.");
-            }
-        } catch (IOException e) {
+            deleteAudioFromLocalStorage(fileId);
+            deleteAudioFromDB(fileId);
+        } catch (Exception e) {
             log.error("Error deleting file", e);
         }
     }
@@ -163,27 +140,17 @@ public class AudioServiceImpl implements AudioService {
         return pathToAudio + fileId + WAV;
     }
 
-    @Transactional
-    public void concatenateAudios(String firstAudio, String secondAudio) {
-        Path outputWavPath = Path.of(pathToAudio + firstAudio + "temporary" + WAV);
-        File file1 = new File(pathToAudio + firstAudio + WAV);
-        File file2 = new File(pathToAudio + secondAudio + WAV);
+    private void deleteAudioFromLocalStorage(String fileId) {
+        Path path = Paths.get(pathToAudio, fileId + WAV);
         try {
-            AudioInputStream clip1 = AudioSystem.getAudioInputStream(file1);
-            AudioInputStream clip2 = AudioSystem.getAudioInputStream(file2);
-
-            AudioInputStream appendedFiles =
-                    new AudioInputStream(
-                            new SequenceInputStream(clip1, clip2),
-                            clip1.getFormat(),
-                            clip1.getFrameLength() + clip2.getFrameLength());
-
-            AudioSystem.write(appendedFiles, AudioFileFormat.Type.WAVE, outputWavPath.toFile());
-            Files.copy(outputWavPath, Path.of(file1.getAbsolutePath()), StandardCopyOption.REPLACE_EXISTING);
-            Files.delete(outputWavPath);
-        } catch (Exception e) {
-            e.printStackTrace();
+            Files.deleteIfExists(path);
+        } catch (IOException e) {
+            log.error("Error deleting file", e);
         }
+    }
+
+    private void deleteAudioFromDB(String fileId) {
+        audioRepository.deleteById(fileId);
     }
 
     @Override
@@ -271,12 +238,117 @@ public class AudioServiceImpl implements AudioService {
             throw new RuntimeException("Error analyzing voice: " + e.getMessage(), e);
         }
     }
+
+    @Transactional
+    public void concatenateAudios(List<String> audioIds, String outputFileId) {
+        if (audioIds == null || audioIds.isEmpty()) {
+            log.info("No audio files to concatenate for output: {}", outputFileId);
+            return;
+        }
+
+        Path outputWavPath = Path.of(pathToAudio, outputFileId + WAV);
+
+        try {
+            // Sort the files in alphabetical order. Because now file naming is based on creation time
+            // and accordingly alphabetical order shows older records first
+            List<File> audioFiles = audioIds.stream()
+                    .sorted() // Sorting by file name
+                    .map(id -> new File(pathToAudio + id + WAV))
+                    .toList();
+
+            if (audioFiles.isEmpty()) {
+                log.warn("No valid audio files found for IDs: {}", audioIds);
+                return;
+            }
+
+            // Getting the first audio stream
+            AudioInputStream appendedFiles = AudioSystem.getAudioInputStream(audioFiles.get(0));
+
+            // Add the rest of the audio streams
+            for (int i = 1; i < audioFiles.size(); i++) {
+                File audioFile = audioFiles.get(i);
+                AudioInputStream nextClip = AudioSystem.getAudioInputStream(audioFile);
+                appendedFiles = new AudioInputStream(
+                        new SequenceInputStream(appendedFiles, nextClip),
+                        appendedFiles.getFormat(),
+                        appendedFiles.getFrameLength() + nextClip.getFrameLength()
+                );
+            }
+
+            // Save the merged file
+            AudioSystem.write(appendedFiles, AudioFileFormat.Type.WAVE, outputWavPath.toFile());
+            log.info("Concatenated audio saved to: {}", outputWavPath);
+
+            // Delete source files after successful merge
+            for (File audioFile : audioFiles) {
+                Files.deleteIfExists(audioFile.toPath());
+            }
+        } catch (Exception e) {
+            log.error("Error concatenating audio files for IDs: {}", audioIds, e);
+            throw new RuntimeException("Failed to concatenate audio files", e);
+        }
+    }
+
+    @Scheduled(cron = "0 0 2 * * *") // We start every day at 2:00 in the morning.
+    @Transactional
+    public void mergeDailyAudios() {
+        LocalDate yesterday = LocalDate.now().minusDays(1);
+        log.info("Starting daily audio merge for date: {}", yesterday);
+
+        // Get all audio recordings for yesterday, grouped by userId
+        Map<Long, List<AudioEntity>> userAudios = audioRepository.findByDate(yesterday).stream()
+                .collect(Collectors.groupingBy(AudioEntity::getUserId));
+
+        for (Map.Entry<Long, List<AudioEntity>> entry : userAudios.entrySet()) {
+            Long userId = entry.getKey();
+            List<AudioEntity> audios = entry.getValue();
+
+            // Create a list of files to be glued together
+            List<String> audioIds = audios.stream()
+                    .map(AudioEntity::getId)
+                    .toList();
+
+            // Merging text data
+            String mergedText = audios.stream()
+                    .map(AudioEntity::getText)
+                    .filter(text -> text != null && !text.isEmpty()) // Remove empty values
+                    .collect(Collectors.joining(" ")); // Merge with a space
+
+
+            // Unique ID for the final file
+            String mergedFileId = userId + "_" + yesterday;
+
+            // Merge files
+            try {
+                concatenateAudios(audioIds, mergedFileId);
+
+                // Save the final record to the database
+                AudioEntity mergedAudio = AudioEntity.builder()
+                        .id(mergedFileId)
+                        .date(yesterday)
+                        .userId(userId)
+                        .text(mergedText)
+                        .build();
+
+                audioRepository.save(mergedAudio);
+
+                // Delete source records from the database
+                audioRepository.deleteAll(audios);
+
+                log.info("Successfully merged audios for userId: {} into file: {}", userId, mergedFileId);
+            } catch (Exception e) {
+                log.error("Failed to merge audios for userId: {}", userId, e);
+            }
+        }
+
+        log.info("Daily audio merge completed.");
+    }
 }
 //todo:how to make analyzeVoice run only when external service/speech_recognize module is running?;
-//todo: analyzeVoice should write data to DB but this data can be written to diary module or another one,
-// we need to think about that globally
+//todo: think how to show text data to user
+//todo: we can make also audio from a week or a month
 //todo: do refactor of all speech_recognize module, make it pretty and clean
 //todo: do refactor of AudioServiceImpl, make it pretty and clean
-//todo: text don't concatenate, need to fix it
 //todo: Improve the analyzeVoice method to check if the external service is available before processing. It's discussed
+//todo: add /healt endpoint to check if the recognition service is available, if not pass "" text;
 
